--- a/resources/application.properties
+++ b/resources/application.properties
@@ -83,6 +83,9 @@ report.log.skip.success=0
 #Use this key to pass the skipped tests, by default all the skipped tests will be marked as fail in reportium
 #skippedTests=pass
 
+#To enable pure appium behaviour configure native/hybrid/web/disable value to the below key
+pureAppiumBehavior=disable
+
 #switch download reports true/false to download reports.
 perfecto.download.reports=false
 perfecto.download.summaryReports=false
@@ -90,8 +93,7 @@ perfecto.download.video=false
 perfecto.download.attachments=false
 perfecto.report.location= perfectoReports
 #perfecto.offlineToken= <<CQ_LAB_SECURITY_TOKEN>>
-
-#Enable neoload driver/ not
+#Enable neoload driver only got mobile web/ desktop web/ set it as a capability in testng.xml
 neoload=true
 # absolute path of neoload project
 neoload_projectPath=/Users/genesisthomas/neoload_projects/Perfecto/Perf.nlp
