--- a/resources/application.properties
+++ b/resources/application.properties
@@ -14,7 +14,7 @@ scenario.file.loc=src/main/resources/scenarios
 step.provider.pkg=com.quantum.steps
 #[selenium]
 #TODO
-remote.server=https://ps.perfectomobile.com/nexperience/perfectomobile/wd/hub/fast
+remote.server=https://<<CLOUD NAME>>.perfectomobile.com/nexperience/perfectomobile/wd/hub/fast
 remote.port=80
 driver.name=perfectoRemoteDriver
 #remove from comment and set eclipse/intellij if you are using perfecto lab plugin 
@@ -23,7 +23,7 @@ driver.name=perfectoRemoteDriver
 #TODO
 perfecto.capabilities.user=<<CQ_LAB_USER>>
 #generate the security token using this document - https://developers.perfectomobile.com/display/PD/Security+Token
-perfecto.capabilities.securityToken=
+perfecto.capabilities.securityToken=<<TOKEN>>
 #perfecto.capabilities.password=<<CQ_LAB_PASSWORD>>
 
 perfecto.capabilities.automationName=Appium
