--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +13,6 @@
 		<testngXmlFile>testng_all.xml</testngXmlFile>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<reportium-sdk.version>2.3</reportium-sdk.version>
-		<selenium.version>3.14.0</selenium.version>
 		<testng.version>6.10</testng.version>
 		<cukes.version>1.2.5</cukes.version>
 		<quantum.version>1.21</quantum.version>
@@ -73,10 +73,10 @@
 			<name>Perfecto mobile</name>
 			<url>https://repo1.perfectomobile.com/public/repositories/maven</url>
 		</repository>
-		 <repository>
+		<repository>
 			<id>jai</id>
 			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
-		</repository> 
+		</repository>
 		<repository>
 			<id>neotys-public-releases</id>
 			<url>http://maven.neotys.com/content/repositories/releases/</url>
@@ -126,11 +126,21 @@
 			<version>${reportium-sdk.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.perfectomobile</groupId>
+			<artifactId>pm-webdriver</artifactId>
+			<version>RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>com.perfectomobile</groupId>
+			<artifactId>http-client</artifactId>
+			<version>RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
 		</dependency>
-			<dependency>
+		<dependency>
 			<groupId>com.neotys.selenium</groupId>
 			<artifactId>neotys-selenium-proxy</artifactId>
 			<version>2.1.0</version>
