--- a/resources/application.properties
+++ b/resources/application.properties
@@ -23,7 +23,7 @@ driver.name=perfectoRemoteDriver
 #TODO
 perfecto.capabilities.user=<<CQ_LAB_USER>>
 #generate the security token using this document - https://developers.perfectomobile.com/display/PD/Security+Token
-perfecto.capabilities.securityToken=<<TOKEN>>
+perfecto.capabilities.securityToken=<<SECURITY TOKEN>>
 #perfecto.capabilities.password=<<CQ_LAB_PASSWORD>>
 
 perfecto.capabilities.automationName=Appium
